--- a/server/nextjs/Dockerfile
+++ b/server/nextjs/Dockerfile
@@ -1,20 +1,20 @@
-# Gunakan image Node.js sebagai dasar
-FROM node:16-slim
+# Gunakan image Node.js terbaru
+FROM node:20-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy package.json dan package-lock.json
+# Copy file dependency
 COPY package*.json /app/
 
 # Install dependencies
 RUN npm install
 
-# Copy seluruh kode aplikasi ke dalam kontainer
+# Salin semua file proyek
 COPY . /app/
 
-# Expose port untuk API 
+# Expose port untuk API
 EXPOSE 4100
 
-# Jalankan Express
-CMD ["npm", "start"]
+# Jalankan aplikasi
+CMD ["node", "app/app.js"]
