--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,16 +21,16 @@ services:
     networks:
       - gemini-network
 
-  api-js:
-    build:
-      context: ./server/nextjs
-    ports:
-      - "4100:4100"
-    environment:
-      - GEMINI_TOKEN_API_KEY=${GEMINI_TOKEN_API_KEY}
-    restart: unless-stopped
-    networks:
-      - gemini-network
+  # api-js:
+  #   build:
+  #     context: ./server/nextjs
+  #   ports:
+  #     - "4100:4100"
+  #   environment:
+  #     - GEMINI_TOKEN_API_KEY=${GEMINI_TOKEN_API_KEY}
+  #   restart: unless-stopped
+  #   networks:
+  #     - gemini-network
 
 networks:
   gemini-network:
