--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,20 +4,20 @@ FROM node:latest AS build
 # Set the working directory in the container
 WORKDIR /app
 
-# Install only production dependencies when possible for optimization
-COPY app/package.json app/package-lock.json ./
+# Copy only the package.json and yarn.lock to install dependencies
+COPY frontend/app/package.json frontend/app/yarn.lock ./
 
 # Validate the Node.js version (Optional but good practice)
-RUN node -v && npm -v
+RUN node -v && yarn -v
 
-# Install dependencies
-RUN npm ci --production=false
+# Install dependencies using Yarn
+RUN yarn install --frozen-lockfile
 
 # Copy all project files to the container
-COPY . .
+COPY frontend/app /app
 
 # Build the React app in production mode
-RUN npm run build
+RUN yarn build
 
 # Step 2: Use the latest NGINX image to serve the built application
 FROM nginx:latest
@@ -27,9 +27,6 @@ COPY config/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy React build files from the previous stage
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Ensure minimal logging for optimized container size
-RUN rm -rf /var/cache/apk/*
 
 # Expose the default HTTP port
 EXPOSE 80
