--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   frontend-ai:
     build:
-      context: ./frontend/
+      context: .
+      dockerfile: frontend/Dockerfile
     ports:
       - "80:80"
-    restart: unless-stopped
 
   api-python:
     build:
